fixed wrapping caused by hike list links being too long

--- a/assets/pdf-shared.css
+++ b/assets/pdf-shared.css
@@ -275,6 +275,10 @@ table.directory-table .column-2 {
 .itinerary-hike-summary ul.hike-list {
 	margin: 0 0 15px;
 }
+
+.itinerary-hike-summary ul.hike-list a {
+	word-wrap: break-word;
+}
 /* End: Hike List */
 
 /* Start: Hikes */
